--- a/package.json
+++ b/package.json
@@ -7,23 +7,24 @@
   "author": "<ishtiaque.zafar92@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "dotenv": "^6.2.0",
-    "express": "^4.16.4",
-    "jsonwebtoken": "^8.4.0",
-    "moment": "^2.23.0",
-    "mongoose": "^5.4.0"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
+    "mongoose": "^5.7.7"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
+    "babel-eslint": "^10.0.3",
     "chai": "^4.2.0",
-    "chai-http": "^3.0.0",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^11.3.1",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-import": "^2.14.0",
-    "mocha": "^3.5.0"
+    "chai-http": "^4.3.0",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-loader": "^3.0.2",
+    "eslint-plugin-import": "^2.18.2",
+    "mocha": "^6.2.2"
   },
   "scripts": {
     "start": "node server.js",
