--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-loader": "^3.0.2",
     "eslint-plugin-import": "^2.18.2",
-    "mocha": "^6.2.2"
+    "mocha": "^6.2.2",
+    "nodemon": "^1.19.4"
   },
   "scripts": {
     "start": "node server.js",
+    "start-dev": "nodemon server.js",
     "test": "mocha --timeout 10000"
   }
 }
