--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
     "eslint-loader": "^3.0.2",
     "eslint-plugin-import": "^2.18.2",
     "mocha": "^6.2.2",
+    "mongodb-memory-server": "^6.0.1",
     "nodemon": "^1.19.4"
   },
   "scripts": {
     "start": "node server.js",
     "start-dev": "nodemon server.js",
-    "test": "mocha --timeout 10000"
+    "test": "NODE_ENV=test JWT_SECRET=test mocha --timeout 20000 --exit"
   }
 }
